--- a/frontend/subject/springboot/aspectj/index.html
+++ b/frontend/subject/springboot/aspectj/index.html
@@ -9,7 +9,6 @@
     <title>aspectj如何操作 - SpringBoot</title>
     <link rel="icon" href="/favicon.ico">
     <link rel="stylesheet" href="/js/lib/prism/prism.css">
-    <script src="/js/lib/prism/prism.js"></script>
     <script src="/js/base.js"></script>
     <script src="/js/lib/flexsearch/flexsearch.bundle.min.js"></script>
     <link rel="stylesheet" href="/css/base.css"/>
@@ -18,7 +17,7 @@
 
 </head>
 
-<body>
+<body data-prismjs-copy-timeout="500">
 <div class="topDiv">
     <div class="topBar">
         <div class="logoDiv">
@@ -73,13 +72,14 @@
 <a href='/subject/springboot/security/index.html'>Spring Security</a>
 <div><a href='/subject/springboot/springsecurity/index.html'>Spring Security Kerberos</a>
 </div>
+<a href='/subject/springboot/route53/index.html'>你你你</a>
 </nav>
     </div>
     <div class="contentDiv">
         <section>
             <header>
                 <span class='articleTitle' id='articleTitle'>aspectj如何操作</span>
-                <span class='publishTime'>lastUpdated : 2024-11-08 23:29:39</span>
+                <span class='publishTime'>lastUpdated : 2024-11-25 01:32:14</span>
             </header>
             <section title="author" class="author">
                 <img id="authorLogo" src="/img/subject-logo4.svg">
@@ -88,31 +88,8 @@
                 <a href="https://twitter.com/jumperoverfgw"><img class="siteImg" src="/img/X.svg"></a>
                 <span class='zcool-xiaowei-regular'>自由职业 专业开发 10年it魔域经验</span>
             </section>
-            <article id='articleContent'><p><br></p><pre class="language-java">package com.jumper.jit.aspect;
-
-import com.jumper.jit.dto.SubjectDTO;
-import com.jumper.jit.model.Article;
-import com.jumper.jit.model.Subject;
-import com.jumper.jit.service.ArticleService;
-import com.jumper.jit.service.DeployService;
-import com.jumper.jit.service.SubjectService;
-import lombok.extern.slf4j.Slf4j;
-import org.aspectj.lang.JoinPoint;
-import org.aspectj.lang.ProceedingJoinPoint;
-import org.aspectj.lang.annotation.After;
-import org.aspectj.lang.annotation.Around;
-import org.aspectj.lang.annotation.Aspect;
-import org.aspectj.lang.annotation.Pointcut;
-import org.aspectj.lang.reflect.MethodSignature;
-import org.junit.jupiter.api.Order;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.stereotype.Component;
-
-@Aspect
-@Component
-@Order(1)
-@Slf4j
-public class AutoDeployProcessor {
+            <article id='articleContent'><p><br></p>
+<pre class="line-numbers"><code class="language-java" data-prismjs-copy="Copy">public class AutoDeployProcessor {
 
     private DeployService deployService;
     private ArticleService articleService;
@@ -246,7 +223,7 @@ public class AutoDeployProcessor {
         }
         return object;
     }
-}</pre></article>
+}</code></pre></article>
         </section>
     </div>
 </div>
@@ -277,8 +254,14 @@ public class AutoDeployProcessor {
 <script type="text/javascript">
     loadNav();
 </script>
+<script src="/js/lib/prism/prism.js"></script>
 <script src="/js/articleTree.js"></script>
 <script type="module" src="/js/indexSearch.js"></script>
+<script>
+    if (!hasHighlighted) {
+        Prism.highlightAll(false);//高亮代码
+    }
+</script>
 </body>
 
 </html>
