--- a/frontend/subject/springboot/springsecurity/index.html
+++ b/frontend/subject/springboot/springsecurity/index.html
@@ -9,7 +9,6 @@
     <title>Spring Security Kerberos - SpringBoot</title>
     <link rel="icon" href="/favicon.ico">
     <link rel="stylesheet" href="/js/lib/prism/prism.css">
-    <script src="/js/lib/prism/prism.js"></script>
     <script src="/js/base.js"></script>
     <script src="/js/lib/flexsearch/flexsearch.bundle.min.js"></script>
     <link rel="stylesheet" href="/css/base.css"/>
@@ -18,7 +17,7 @@
 
 </head>
 
-<body>
+<body data-prismjs-copy-timeout="500">
 <div class="topDiv">
     <div class="topBar">
         <div class="logoDiv">
@@ -73,6 +72,7 @@
 <a href='/subject/springboot/security/index.html'>Spring Security</a>
 <div><a href='/subject/springboot/springsecurity/index.html'>Spring Security Kerberos</a>
 </div>
+<a href='/subject/springboot/route53/index.html'>你你你</a>
 </nav>
     </div>
     <div class="contentDiv">
@@ -119,8 +119,14 @@
 <script type="text/javascript">
     loadNav();
 </script>
+<script src="/js/lib/prism/prism.js"></script>
 <script src="/js/articleTree.js"></script>
 <script type="module" src="/js/indexSearch.js"></script>
+<script>
+    if (!hasHighlighted) {
+        Prism.highlightAll(false);//高亮代码
+    }
+</script>
 </body>
 
 </html>
