--- a/frontend/subject/springboot/springcloud/index.html
+++ b/frontend/subject/springboot/springcloud/index.html
@@ -40,7 +40,7 @@
             <ul id="topNav">
                 <li id="articleLabel"><a href="/articles/index.html">点滴文章</a></li>
                 <li><a href='/subject/springboot/index.html'>SpringBoot</a></li>
-<li><a href='/subject/java/index.html'>Java</a></li>
+<li><a href='/subject/java2/index.html'>Java</a></li>
 <li><a href='/subject/html/index.html'>html</a></li>
 <li><a href='/subject/css/index.html'>CSS</a></li>
 <li><a href='/subject/search-engine/index.html'>搜索引擎</a></li>
@@ -56,8 +56,8 @@
     <div class="titleTreeDiv700 titleTreeDiv" id="titleTreeDiv">
         <p class='subjectTitle' data-sub-dir='springboot'>SpringBoot</p>
         <hr>
-        <nav class="titleTree" id="titleTree"><a href='/subject/springboot/asdfasdfasdfsddddd/index.html'>Spring Framework</a>
-<div><a href='/subject/springboot/spring-logbak3/index.html'>SpringBoot3 整合 Logback 日志框架3</a>
+        <nav class="titleTree" id="titleTree"><a href='/subject/springboot/info/index.html'>Spring Framework</a>
+<div><a href='/subject/springboot/info2/index.html'>SpringBoot3 整合 Logback 日志框架3</a>
 <a href='/subject/springboot/aspectj/index.html'>aspectj如何操作</a>
 </div>
 <a href='/subject/springboot/springdata/index.html'>Spring Data</a>
@@ -79,7 +79,7 @@
         <section>
             <header>
                 <span class='articleTitle' id='articleTitle'>Spring Cloud</span>
-                <span class='publishTime'>lastUpdated : 2024-11-25 00:28:52</span>
+                <span class='publishTime'>lastUpdated : 2024-11-27 03:18:36</span>
             </header>
             <section title="author" class="author">
                 <img id="authorLogo" src="/img/subject-logo4.svg">
